<resources>
    <string name="app_name">Feeder</string>
    <string name="app_description">One place to follow</string>

    <string name="title_login">Login</string>
    <string name="title_register">Register</string>

    <string name="title_dashboard">Dashboard</string>

    <string name="title_home">Home</string>
    <string name="title_add_rss">Add RSS</string>
    <string name="title_settings">Settings</string>

    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">E-mail</string>
    <string name="submit">Submit</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="login_google">Google</string>
    <string name="login_facebook">Facebook</string>
    <string name="view">View</string>

    <string name="name">Name</string>
    <string name="url">Url</string>

    <string name="email_error">Something is wrong with e-mail</string>
    <string name="password_error">Something is wrong with password</string>

    <string name="whats_new">Whats new</string>
    <string name="whats_new_body">Nothing</string>
    <string name="verf_code">Verification code</string>

    <string name="are_you_sure">Are you sure?</string>

    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="pick_language">Pick Language</string>
    <string name="notifications">Notifications</string>
    <string name="theme">Theme</string>

    <string name="base_language">English</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_password">Change Password</string>
    <string-array name="languages">
        <item>English</item>
        <item>Polish</item>
        <item>Chinese</item>
    </string-array>
</resources>