<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_events">

    <fragment
        android:id="@+id/navigation_events"
        android:name="com.example.feeder.ui.events.EventListFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navigation_add_rss"
        android:name="com.example.feeder.ui.AddRSSFragment"
        android:label="@string/title_add_rss"
        tools:layout="@layout/fragment_add_rss" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.feeder.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>